implemented the tabbed features section

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <div class="features__nav">
 
       <nav class="features__nav--btns">
-          <a href="#link1">Simple Bookmarking</a>
-          <a href="#link2">Speedy Searching</a>
-          <a href="#link3">Easy Sharing</a>
+          <a href="#link1" onclick="showPanel(0)" class="tabbed-btns">Simple Bookmarking</a>
+          <a href="#link2" onclick="showPanel(1)" class="tabbed-btns">Speedy Searching</a>
+          <a href="#link3" onclick="showPanel(2)" class="tabbed-btns">Easy Sharing</a>
       </nav>
 
         <div id="link1" class="features__tab">
@@ -226,5 +226,7 @@
   Contact
   
 -->
+
+<script src="app.js"></script>
 </body>
 </html>
