--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <!--FEATURES-->
   <section class="features">
-    <h2 class="features__heading">Features</h2>
+    <h2 class="features__heading h2">Features</h2>
     <p class="features__para para"> 
       Our aim is to make it quick and easy for you to access your favourite websites. 
       Your bookmarks sync between your devices so you can access them on the go.
@@ -112,6 +112,53 @@
                 </div>
         </div>  
     </div>
+  </section>
+
+  <section class="download">
+    <h2 class="download__heading h2">
+      Download the extension
+    </h2>
+    <p class="download__para para">
+      We’ve got more browsers in the pipeline. Please do let us know if you’ve 
+      got a favourite you’d like us to prioritize.
+    </p>
+
+    <div class="download__box">
+      <div class="download__box--card card">
+        <img src="images/logo-chrome.svg" alt="Chrome Logo">
+        <h3>Add to Chrome</h3>
+        <p>Minimum version 62</p>
+        <img src="images/bg-dots.svg" alt="dotted line">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+
+      <div class="download__box--card card">
+        <img src="images/logo-firefox.svg" alt="Firefox Logo">
+        <h3>Add to Firefox</h3>
+        <p>Minimum version 55</p>
+        <img src="images/bg-dots.svg" alt="dotted line">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+
+      <div class="download__box--card card">
+        <img src="images/logo-opera.svg" alt="Opera Logo">
+        <h3>Add to Opera</h3>
+        <p>Minimum version 46</p>
+        <img src="images/bg-dots.svg" alt="dotted line">
+        <button class="btn">Add & Install Extension</button>
+      </div>
+      
+    </div>
+  </section>
+
+  <section class="faq">
+    <h2 class="faq__heading h2">
+      Frequently Asked Questions
+    </h2>
+    <p class="faq__para para">
+      Here are some of our FAQs. If you have any other questions you’d like 
+      answered please feel free to email us.
+    </p>
   </section>
 
 <!--
