created scg sprite file
replaced some images with SVGs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <!--HEADER-->
   <header class="header">
     <div class="header__top">
-      <img classs="header__logo" src="images/logo-bookmark.svg" alt="header logo">
+      <svg class="header__logo">
+        <use xlink:href="images/sprite.svg#icon-logo-bookmark"></use>
+      </svg>
     
       <div class="header__nav">
         <button class="btn-nav">Features</button>
@@ -59,12 +61,12 @@
     <div class="features__nav">
 
       <nav class="features__nav--btns">
-          <a href="#link1" onclick="showPanel(0)" class="tabbed-btns">Simple Bookmarking</a>
-          <a href="#link2" onclick="showPanel(1)" class="tabbed-btns">Speedy Searching</a>
-          <a href="#link3" onclick="showPanel(2)" class="tabbed-btns">Easy Sharing</a>
+          <button onclick="showPanel(0)" class="tabbed-btns">Simple Bookmarking</button>
+          <button onclick="showPanel(1)" class="tabbed-btns">Speedy Searching</button>
+          <button onclick="showPanel(2)" class="tabbed-btns">Easy Sharing</button>
       </nav>
 
-        <div id="link1" class="features__tab">
+        <div class="features__tab">
                 <div class="features__tab--right">
                   <h1>Bookmark in one click</h1>
                   <p class="para">
@@ -80,7 +82,7 @@
                 </div>
         </div>
 
-        <div id="link2" class="features__tab">
+        <div class="features__tab">
                 <div class="features__tab--right">
                   <h1>Intelligent search</h1>
                   <p class="para">
@@ -96,7 +98,7 @@
                 </div>
         </div>
 
-        <div id="link3" class="features__tab">
+        <div class="features__tab">
                 <div class="features__tab--right">
                   <h1>Share your bookmarks</h1>
                   <p class="para">
@@ -159,107 +161,90 @@
       Here are some of our FAQs. If you have any other questions you’d like 
       answered please feel free to email us.
     </p>
+
+    <div class="faq__ques">
+      <div class="faq__ques-q">
+        <h5>What is Bookmark?</h5>
+        <svg class="faq-arrow">
+          <use xlink:href="images/sprite.svg#icon-icon-arrow"></use>
+        </svg>
+      </div>    
+          <p class="faq__ques--para para">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
+            justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
+          </p>
+    </div>
+    <div class="faq__ques">
+        <div class="faq__ques-q">
+            <h5>How can I request a new browser?</h5>
+            <svg class="faq-arrow">
+              <use xlink:href="images/sprite.svg#icon-icon-arrow"></use>
+            </svg>
+        </div>    
+            <p class="faq__ques--para para">
+              Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
+              Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
+              ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
+              Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+            </p>
+      </div>
+      <div class="faq__ques">
+          <div class="faq__ques-q">
+            <h5>Is there a mobile app?</h5>
+            <svg class="faq-arrow">
+              <use xlink:href="images/sprite.svg#icon-icon-arrow"></use>
+            </svg>
+          </div>    
+              <p class="faq__ques--para para">
+                Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
+                urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
+                sollicitudin ex et ultricies bibendum.
+              </p>
+        </div>
+        <div class="faq__ques">
+            <div class="faq__ques-q">
+              <h5>What about other Chromium browsers?</h5>
+              <svg class="faq-arrow">
+                <use xlink:href="images/sprite.svg#icon-icon-arrow"></use>
+              </svg>
+            </div>    
+                <p class="faq__ques--para para">
+                    Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
+                    vitae neque eget nisl gravida pellentesque non ut velit.
+                </p>
+          </div>
+
+          <button class="faq__btn btn">More Info</button>
   </section>
 
+
+  <section class="contact">
+    <h3 class='contact__h3'>35,000+ already joined</h3>
+    <h2 class="contact__h2">Stay up-to-date with what we’re doing</h2>
+
+    <form action="#" class="contact__form">
+      <input type="email" class="contact__form--field" placeholder="Enter your email address">
+      <button type="submit" class="contact__form--btn btn">Contact Us</button>
+    </form>
+  </section>
+
+  <footer class="footer">
+    <div class="footer__nav">
+      <svg class="footer__nav--logo">
+        <use xlink:href="images/sprite.svg#icon-logo-bookmark"></use>
+      </svg>
+
+      <a href="#">Features</a>
+      <a href="#">Pricing</a>
+      <a href="#">Contact</a>
+    </div>
+
+    <div class="footer__social">    
+      <a href="#"><img src="images/icon-facebook.svg" alt="facebook logo"></a>
+      <a href="#"><img src="images/icon-twitter.svg" alt="twitter logo"></a>
+    </div>
+  </footer>
 <!--
-  Features
-  Pricing
-  Contact
-  Login
-
-  A Simple Bookmark Manager
-
-  A clean and simple interface to organize your favourite websites. Open a new 
-  browser tab and see your sites load instantly. Try it for free.
-
-  Get it on Chrome
-  Get it on Firefox
-
-  Features
-
-  Our aim is to make it quick and easy for you to access your favourite websites. 
-  Your bookmarks sync between your devices so you can access them on the go.
-
-  Simple Bookmarking
-  Speedy Searching
-  Easy Sharing
-
-  Bookmark in one click
-
-  Organize your bookmarks however you like. Our simple drag-and-drop interface 
-  gives you complete control over how you manage your favourite sites.
-
-  More Info
-
-  Intelligent search
-
-  Our powerful search feature will help you find saved sites in no time at all. 
-  No need to trawl through all of your bookmarks.
-
-  More Info
-
-  Share your bookmarks
-
-  Easily share your bookmarks and collections with others. Create a shareable 
-  link that you can send at the click of a button.
-
-  More Info
-
-  Download the extension
-
-  We’ve got more browsers in the pipeline. Please do let us know if you’ve 
-  got a favourite you’d like us to prioritize.
-
-  Add to Chrome
-  Minimum version 62
-  Add & Install Extension
-
-  Add to Firefox
-  Minimum version 55
-  Add & Install Extension
-
-  Add to Opera
-  Minimum version 46
-  Add & Install Extension
-
-  Frequently Asked Questions
-  
-  Here are some of our FAQs. If you have any other questions you’d like 
-  answered please feel free to email us.
-
--->
-<!--
- Question 1 
-  What is Bookmark?
-
-   Answer 1
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
-
-   Question 2
-  How can I request a new browser?
-
-   Answer 2 
-  Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
-
-   Question 3 
-  Is there a mobile app?
-
-  Answer 3 
-  Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
-  sollicitudin ex et ultricies bibendum.
-
-  Question 4
-  What about other Chromium browsers?
-
-  Answer 4
-  Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
-  vitae neque eget nisl gravida pellentesque non ut velit.
-
   More Info
 
   35,000+ already joined
